Added robots.txt, sitemap and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+     <meta name="google-site-verification" content="lyqrG0bzLJ0NeWHkgkohdtcQYybE2dvI9ZZekna-EPA" />
+     <meta name="description" content="Ahja perearst - Dr. Diana Kirss OÜ. Asume Nooruse 2-1 teisel korrusel, Ahja, Põlva vald. Tel: 7921476. Pereõde Helika Urbla. Hetkel on Diana Kirss lapsehooldusepuhkusel, asendusarst on Dr. Triin Jaanimägi.">
+     <meta name="author" content="Janar Kallson">
+     <meta name="keywords" content="perearst, ahja perearst, diana kirss, ahja, perearsti kabinet, põlva, tervisetõend, vaktsineerimine, ravimretseptid, põlvamaa, vastuvõtt, ahja hooldekodu, hooldekodu">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Ahja perearst</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
