Ensured that text remains visible during webfont load

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
      <meta name="keywords" content="perearst, ahja perearst, diana kirss, ahja, perearsti kabinet, põlva, tervisetõend, vaktsineerimine, ravimretseptid, põlvamaa, vastuvõtt, ahja hooldekodu, hooldekodu">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Ahja perearst</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
